--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <p class="mb-6 text-lg text-gray-700 tracking-wide">
         Explora, aprende y crea con tecnología real
       </p>
-      <img src="img/logo.png" alt="Tecnología en el aula" class="w-48 mx-auto mb-6 rounded-2xl shadow-lg">
+      <img src="img/LOGO.png" alt="Tecnología en el aula" class="w-48 mx-auto mb-6 rounded-2xl shadow-lg">
       <div class="bg-gray-100 text-gray-700 text-sm p-3 rounded-lg mb-6 border border-gray-300">
         Esta aplicación se ha diseñado como un recurso complementario para facilitar el aprendizaje y apoyar la labor del profesorado. En ningún caso sustituye los materiales, explicaciones ni orientaciones proporcionadas en clase.
       </div>
@@ -3691,3 +3691,4 @@ document.addEventListener('DOMContentLoaded', showHome);
   </script>
 </body>
 </html>
+
