--- a/index.html
+++ b/index.html
@@ -1003,7 +1003,7 @@ development: {
     "image": "img/tema8.jpg"
   },
 development: {
-          presentationIframe: "file:1ESO/Tema-Electricidad-basica.pdf"
+          presentationIframe: "1ESO/Tema-Electricidad-basica.pdf"
         },
 
   "news": [
@@ -3800,4 +3800,5 @@ document.addEventListener('DOMContentLoaded', showHome);
   </script>
 </body>
 </html>
+
 
