--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <p class="mb-6 text-lg text-gray-700 tracking-wide">
         Explora, aprende y crea con tecnología real
       </p>
-      <img src="img/LOGO.png" alt="Tecnología en el aula" class="w-48 mx-auto mb-6 rounded-2xl shadow-lg">
+      <img src="img/logo.png" alt="Tecnología en el aula" class="w-48 mx-auto mb-6 rounded-2xl shadow-lg">
       <div class="bg-gray-100 text-gray-700 text-sm p-3 rounded-lg mb-6 border border-gray-300">
         Esta aplicación se ha diseñado como un recurso complementario para facilitar el aprendizaje y apoyar la labor del profesorado. En ningún caso sustituye los materiales, explicaciones ni orientaciones proporcionadas en clase.
       </div>
@@ -312,7 +312,7 @@ development: {
   "image": "img/tema2.jpg"
 },
 development: {
-          presentationIframe: "1ESO/Tema-Hardware-y-software.pdf" 
+          presentationIframe: "https://procomun.intef.es/ode/view/widget/es_2023122712_9165935" 
         },
 
   "news": [
@@ -420,7 +420,7 @@ development: {
     "image": "img/tema3.jpg"
   },
 development: {
-          presentationIframe: "1ESO/Tema-Que-es-la-tecnologia-y-como-nos-ayuda-Tecnologia-sostenible.pdf" 
+          presentationIframe: "https://descargas.intef.es/recursos_educativos/ODES_SGOA/ESO/TD/7B4_SA_ESO_TD1-3_TecnologiaInclusiva/index.html" 
         },
   "news": [
     {
@@ -539,7 +539,7 @@ development: {
     "image": "img/tema4.jpg"
   },
 development: {
-          presentationIframe: "1ESOTema-Proceso-tecnologico-y-representacion.pdf"
+          presentationIframe: "https://procomun.intef.es/ode/view/es_2024030712_9193408"
         },
 
   "news": [
@@ -648,7 +648,7 @@ development: {
     "image": "img/tema5.jpg"
   },
 development: {
-          presentationIframe: "1ESO/Materiales-y-sostenibilidad.pdf"
+          presentationIframe: "https://escholarium.educarex.es/coursePlayer/curso2.php?idcurso=192385&uriext=1&bd=escholarium"
         },
     "news": [
     {
@@ -766,7 +766,7 @@ development: {
     "image": "img/tema6.jpg"
   },
 development: {
-          presentationIframe: "1ESO/Tema-Diseno-2D-y-3D.pdf"
+          presentationIframe: "https://escholarium.educarex.es/coursePlayer/clases2.php?editar=0&idcurso=179245&idclase=6207181&modo=0"
         },
 
   "news": [
@@ -1003,7 +1003,7 @@ development: {
     "image": "img/tema8.jpg"
   },
 development: {
-          presentationIframe: "1ESO/Tema-Electricidad-basica.pdf"
+          presentationIframe: "https://procomun.intef.es/ode/view/es_2023110412_9175406"
         },
 
   "news": [
@@ -1124,7 +1124,7 @@ development: {
     "image": "img/tema9.jpg"
   },
 development: {
-          presentationIframe: "1ESO/Tema-Ciudadania-y-seguridad-digital.pdf"
+          presentationIframe: "https://procomun.intef.es/ode/view/es_2025032412_9242424"
         },
   "news": [
     {
@@ -1242,7 +1242,7 @@ development: {
     "image": "img/tema10.jpg"
   },
 development: {
-          presentationIframe: "1ESO/Tema-Pensamiento-computacional-programacion-basica-y-IoT.pdf"
+          presentationIframe: "https://descargas.intef.es/recursos_educativos/ODES_SGOA/Codigo_Escuela/Descifrando_codigo_Ada_2_ciclo/introduccin.html"
         },
   "news": [
     {
@@ -2526,6 +2526,10 @@ development: {
     ],
     "image": "img/tema21.jpg"
   },
+development: {
+          presentationIframe: "https://descargas.intef.es/cedec/proyectoedia/tecnologia/contenidos/la_voz_inventos/index.html"
+        },
+
   "news": [
     {
       "titulo": "¿Puede un instituto mejorar tu ciudad? En Xàtiva lo están demostrando",
@@ -3800,5 +3804,3 @@ document.addEventListener('DOMContentLoaded', showHome);
   </script>
 </body>
 </html>
-
-
