--- a/index.html
+++ b/index.html
@@ -1366,6 +1366,9 @@ development: {
     ],
     "image": "img/tema11.jpg"
   },
+development: {
+          presentationIframe: "https://procomun.intef.es/ode/view/es_2024022212_9111840"
+        },
   "news": [
     {
       "titulo": "El Aprendizaje Basado en Proyectos, un método educativo que se extiende pero, ¿sabemos si funciona?",
@@ -1480,6 +1483,9 @@ development: {
     ],
     "image": "img/tema12.jpg"
   },
+development: {
+          presentationIframe: "https://procomun.intef.es/ode/view/es_2024011512_9181214"
+        },
   "news": [
     {
       "titulo": "Trágate el táper, los nuevos envases comestibles hechos de algas o bioplásticos",
@@ -1594,6 +1600,9 @@ development: {
     ],
     "image": "img/tema13.jpg"
   },
+development: {
+          presentationIframe: "https://procomun.intef.es/ode/view/es_2025050912_9170212"
+        },
 "news": [
   {
     "titulo": "Órbita Laika – Física con Javier Santaolalla: eficiencia energética",
@@ -1709,6 +1718,9 @@ development: {
     ],
     "image": "img/tema14.jpeg"
   },
+development: {
+          presentationIframe: "https://escholarium.educarex.es/coursePlayer/curso2.php?idcurso=152979&uriext=1&bd=escholarium"
+        },
   "news": [
     {
       "titulo": "Órbita Laika – Adrián García: La física de los músculos",
@@ -1824,6 +1836,9 @@ development: {
     ],
     "image": "img/tema15.jpg"
   },
+development: {
+          presentationIframe: "https://www.aulademartin.com/tecnología-y-digitalización/tyd-3º-eso/diseño-2d"
+        },
   "news": [
     {
       "titulo": "7 programas gratis de diseño CAD",
@@ -1940,6 +1955,9 @@ development: {
     ],
     "image": "img/tema16.jpg"
   },
+development: {
+          presentationIframe: "https://procomun.intef.es/ode/view/es_2025030912_9163304"
+        },
   "news": [
     {
       "titulo": "Universo Sostenible: La impresión en 3D",
@@ -2059,6 +2077,9 @@ development: {
     ],
     "image": "img/tema17.jpg"
   },
+development: {
+          presentationIframe: "https://procomun.intef.es/ode/view/es_2024010512_9150849"
+        },
   "news": [
     {
       "titulo": "La restricción del uso de móviles en centros educativos: objetivo cumplido en A Coruña",
@@ -2174,6 +2195,9 @@ development: {
     ],
     "image": "img/tema18.jpg"
   },
+development: {
+          presentationIframe: "https://edea.juntadeandalucia.es/bancorecursos/file/e4bb3b23-25ee-4578-9f0c-6be5cba1fb6e/1/COM_3ESO_REA_02_v01.zip/1_una_imagen_vale_ms_que_mil_palabras.html"
+        },
   "news": [
     {
       "titulo": "Dieciséis centros educativos del Campo de Gibraltar se inician en Inteligencia Artificial",
@@ -2288,6 +2312,9 @@ development: {
     ],
     "image": "img/tema19.jpg"
   },
+development: {
+          presentationIframe: "https://procomun.intef.es/ode/view/es_2024030512_9192635"
+        },
   "news": [
     {
       "titulo": "Proyectos basados en Arduino para aprender programación y robótica",
@@ -2402,6 +2429,9 @@ development: {
     ],
     "image": "img/tema20.jpg"
   },
+development: {
+          presentationIframe: "https://escholarium.educarex.es/coursePlayer/curso2.php?idcurso=155965&uriext=1&bd=escholarium"
+        },
   "news": [
     {
       "titulo": "El Encuentro Internacional de Desarrollo Sostenible impulsa los ODS en la educación",
@@ -2651,6 +2681,9 @@ development: {
     ],
     "image": "img/tema22.jpg"
   },
+development: {
+          presentationIframe: "4ESO/tecnologias1-4oeso-teresa-20-21.pdf"
+        },
   "news": [
     {
       "titulo": "Normas de diseño ecológico para garantizar productos sostenibles en la UE",
@@ -2771,6 +2804,9 @@ development: {
     ],
     "image": "img/tema23.jpg"
   },
+development: {
+          presentationIframe: "https://procomun.intef.es/ode/view/es_2024031612_9060209"
+        },
   "news": [
     {
       "titulo": "Los 10 Mejores Simuladores de Circuitos Eléctricos [PC y Online]",
@@ -2885,6 +2921,9 @@ development: {
     ],
     "image": "img/tema24.jpg"
   },
+development: {
+          presentationIframe: "4ESO/T4_Neumatica.pdf"
+        },
   "news": [
     {
       "titulo": "Dos alumnos del CIP Virgen del Camino ganan premios Silver Piston España 2024",
@@ -3002,6 +3041,10 @@ development: {
     ],
     "image": "img/tema25.jpg"
   },
+development: {
+          presentationIframe: "https://procomun.intef.es/ode/view/es_2023122612_9195932"
+        },
+
   "news": [
     {
       "titulo": "Los centros de la Región serán los primeros en impartir el programa 'Escuela 4.0'",
@@ -3117,6 +3160,9 @@ development: {
     ],
     "image": "img/tema26.jpg"
   },
+development: {
+          presentationIframe: "4ESO/4º-ESO-TEMA-1-INSTALACIONES-EN-VIVIENDAS.pdf"
+        },
   "news": [
     {
       "titulo": "Comando Actualidad 5.0 - ¿Mi casa me espía?",
@@ -3230,6 +3276,10 @@ development: {
     ],
     "image": "img/tema27.jpg"
   },
+development: {
+          presentationIframe: "https://www3.gobiernodecanarias.org/medusa/ecoescuela/recursosdigitales/2024/07/17/muevete-con-responsabilidad-sostenibilidad-y-educacion-ambiental-bachillerato-recursos-educativos-lomloe"
+        },
+
   "news": [
     {
       "titulo": "Lorca instala más cámaras de monitorización para mejorar la movilidad urbana",
@@ -3804,4 +3854,3 @@ document.addEventListener('DOMContentLoaded', showHome);
   </script>
 </body>
 </html>
-
