--- a/index.html
+++ b/index.html
@@ -147,11 +147,23 @@
     </div>
   </div>
 
-  <!-- Footer -->
-  <footer class="bg-gray-900/95 border-t border-purple-500 text-white text-center text-sm p-3 mt-auto">
-    TechApp © 2025 by Tecnohelmantica is licensed under CC BY-NC 4.0 
-    <a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank" class="text-blue-400 underline">CC BY-NC 4.0</a>
-  </footer>
+<!-- Footer -->
+<footer class="bg-gray-900/95 border-t border-purple-500 text-white text-center text-sm p-3 mt-auto">
+  <p>
+    <a href="https://tecnohelmantica.github.io/Techapp-educacion/" class="text-blue-400 underline">TechApp</a> © 2025 by
+    <a href="https://github.com/tecnohelmantica" class="text-blue-400 underline">Tecnohelmantica</a> is licensed under
+    <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank" class="text-blue-400 underline">
+      Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International
+    </a>
+    <span class="inline-flex items-center ml-2 space-x-1 align-middle">
+      <img src="https://mirrors.creativecommons.org/presskit/icons/cc.svg" alt="CC" class="inline w-4 h-4">
+      <img src="https://mirrors.creativecommons.org/presskit/icons/by.svg" alt="BY" class="inline w-4 h-4">
+      <img src="https://mirrors.creativecommons.org/presskit/icons/nc.svg" alt="NC" class="inline w-4 h-4">
+      <img src="https://mirrors.creativecommons.org/presskit/icons/sa.svg" alt="SA" class="inline w-4 h-4">
+    </span>
+  </p>
+</footer>
+
 
   <!-- Script -->
   <script>
@@ -3854,3 +3866,4 @@ document.addEventListener('DOMContentLoaded', showHome);
   </script>
 </body>
 </html>
+
