--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </p>
       <img src="img/LOGO.png" alt="Tecnología en el aula" class="w-48 mx-auto mb-6 rounded-2xl shadow-lg">
       <div class="bg-gray-100 text-gray-700 text-sm p-3 rounded-lg mb-6 border border-gray-300">
-        Esta aplicación se ha diseñado como un recurso complementario para facilitar el aprendizaje y apoyar la labor del profesorado. En ningún caso sustituye los materiales, explicaciones ni orientaciones proporcionadas en clase.
+        Esta aplicación complementa el trabajo del aula, ofreciendo materiales interactivos y retos que pueden adaptarse a distintas metodologías y necesidades educativas.
       </div>
       <div class="grid grid-cols-1 gap-4">
         <button onclick="showCourseTopics('1eso')" class="bg-gradient-primary text-white p-4 rounded-2xl shadow hover:scale-[1.02] transition">
@@ -3866,4 +3866,5 @@ document.addEventListener('DOMContentLoaded', showHome);
   </script>
 </body>
 </html>
+
 
